<resources>
    <string name="app_name">Movie DB</string>
    <string name="loading_poster">Loading movie\'s poster…</string>
    <string name="searching">Searching…</string>
    <string name="empty" />
    <string name="search">Search</string>
    <string name="language_settings">Language Settings</string>
    <string name="upcoming">Upcoming</string>
    <string name="now_playing">Now Playing</string>
    <string name="movie_search">Movie Search</string>
    <string name="movie_database">Movie Database</string>
    <string name="searching_for">Searching: %1$s</string>
    <string name="put_search_keyword_here">Put search keyword here…</string>
    <string name="upcoming_movie">Upcoming Movie</string>
    <string name="share">Share</string>
    <string name="released"><b>Released:</b> %1$s</string>
    <string name="share_to">Share to…</string>
    <string name="favorites">Favorites</string>
    <string name="remove_from_fave">%1$s removed from favorite list</string>
    <string name="added_to_fave">%1$s added to favorite list</string>
    <string name="loading">Loading...</string>
</resources>
